Fix Facebook layout issue

--- a/app/webroot/css/components.css
+++ b/app/webroot/css/components.css
@@ -315,3 +315,11 @@
     background: #fff;
     color: green;
 }
+
+/**
+ * Facebook share
+ */
+
+.fb_reset > div {
+    overflow: visible !important;
+}
